@@ -6,13 +6,13 @@ import st.redline.ProtoObject;
 public class ClassSubclassMethod extends ProtoMethod {
 
 	public ProtoObject applyTo(ProtoObject receiver, ProtoObject classMethodWasFoundIn, ProtoObject argument) {
+		String name = String.valueOf(argument.javaValue());
 		ProtoObject subclass = ProtoObject.primitiveCreateSubclass(receiver);
-		ProtoObject.primitiveRegisterAs(subclass, fullyQualifiedClassName(argument));
+		ProtoObject.primitiveRegisterAs(subclass, fullyQualifiedClassName(name));
 		return subclass;
 	}
 
-	private String fullyQualifiedClassName(ProtoObject argument) {
-		String name = String.valueOf(argument.javaValue());
+	private String fullyQualifiedClassName(String name) {
 		String packageName = ProtoObject.primitivePackageRegistryCurrent();
 		return packageName == null ? name : packageName + "." + name;
 	}
